app/less/_dialog.less
.ngdialog {
  &.ngdialog-theme-default {
    .ngdialog-content {
      background-color: #fff;
    }
  }
}

.ngdialog-content {
  border-radius: 4px;
  box-shadow: 0 8px 30px fade(#000, 50%);
  padding: 20px;
  position: relative;

  .dialog-inner {
    .title {
      .section-title-black;
      border-bottom: 1px solid #f2f2f2;
      margin: 0;
      padding: 0 0 17px 0;
    }
    .dialog-body {
      .content {
        .text-default;
        padding: 17px 0 36px 0;

        .day-date {
          .title-H4;
          //padding: 17px 0 36px 0;
        }

        .date {
          .text-grey-small;
          //padding: 17px 0 36px 0;
        }
      }

      .content-media {
        margin-top: 20px;
        word-wrap: break-word;

        .form-group {
          label {
            .text-grey-small;
            color: @iConnect-black;
          }

          .form-control {
            .text-default;

            border: 1px solid #f2f2f2;
            border-radius: 2px;
            box-shadow: none;
            background-color: #fafafa;

            padding: 7px 10px;
            margin-bottom: 20px;
            word-wrap: break-word;

            transition: background-color .1s linear;

            &:focus {
              background-color: @iConnect-white;
              outline: none;
            }

            &[disabled] {
              background-color: #fafafa;
              cursor: default;
            }
          }
        }
      }

      .content-icon {
        padding: 7px 10px;
        display: block;
        margin: 17px;

        .icon {
          display: block;
          margin-bottom: 20px;

          img {
            display: block;
            margin: 0 auto;
            width: 60px;
            max-width: 60px;
            height: auto;
          }
        }
        .message {
          display: block;
          text-align: center;
          margin: 0 auto;
          .text-default;
        }
      }

      .content-photo {
        margin-bottom: 9px;
        position: relative;

        img {
          width: 100%;
          max-width: 100%;
          height: auto;
          display: block;
          border-radius: 4px;
        }

        .shade-layer {
          position: absolute;
          width: 100%;
          height: 100%;
          top: 0;
          left: 0;
          background-color: rgba(255, 255, 255, .8);

          .progress {
            position: absolute;
            top: 50%;
            display: block;
            width: 84%;
            left: 50%;
            transform: translate(-50%, -50%);
            margin-bottom: 0;
            overflow: visible;

            .progress-bar {
              position: relative;
              overflow-x:visible;
              white-space:nowrap;
              color:black; /* color is for demo purposes */
              background-color: #ff5400;

              .percent {
                .text-default;
                color: #e62117;
                position: absolute;
                top: -17px;
                right: 0;
              }
            }
          }
        }
      }

      .content-list {
        padding: 20px 0 0 0;
        max-height: 350px;
        overflow-y: scroll;
        overflow-x: hidden;
        border-bottom: 1px solid #f2f2f2;
        margin-bottom: 20px;

        .list-item {
          display: flex;
          flex-direction: row;
          align-items: center;
          justify-content: space-between;
          margin-bottom: 10px;
          overflow: hidden;
          padding: 0 10px 0 0;

          .photo {
            border-radius: 2px;
            overflow: hidden;

            &.canvas-image-preview {
              width: 80px;
              height: 80px;
              border-radius: 2px;
            }

            img {
              max-width: 80px;
              height: auto;
              border-radius: 2px;
            }
          }

          .responce {
            .text-default;
            max-width: 130px;
            white-space: nowrap;
            overflow: hidden;
            text-overflow: ellipsis;
            margin-left: 20px;
            margin-right: auto;
            flex-grow: 3;

            &.success {
              color: #00b700;
            }
            &.processing {
              color: #333;
            }
            &.error {
              color: #e62117;
            }
          }

          .action {
            padding-right: 5px;

            a {
              .text-default;
              color: #999;
              display: block;
            }
          }
        }
      }

      .helper {
        .text-grey-small;
        color: #f00;
        font-weight: @fw-regular;
        margin-bottom: 20px;
      }

      .ic-btn {
        display: block;
        margin: 10px auto 0;
        width: 100%;
        max-width: none;

        &.disabled {
          opacity: .6;
          border-color: transparent;

          &:hover {
            opacity: .6;
            border-color: transparent;
          }
        }

      }
    }
  }

  .progress {
    height: 4px;
    background-color: #fafafa;
    margin-bottom: 36px;

    .progress-bar {
      background-color: #00B700;
    }
  }

}

.request-popup {
  .header {
    .section-title-black;
    border-bottom: 1px solid #f2f2f2;
    margin: 0;
    padding: 0 0 17px 0;
  }

  .content {
    .account {
      display: flex;
      flex-direction: row;
      justify-content: space-between;
      align-items: center;
      padding-top: 20px;
      padding-bottom: 17px;

      .label {
        .text-grey-small;
        padding: 0;
      }
      .dropdown-btn {
        .section-title-black;
        border: none;
        background: #fff;
        outline: none;

        .caret {
          color: #e5e5e5;
          margin-left: 20px;
        }
      }
      .dropdown {
        .dropdown-menu {
          padding: 10px;
          border-radius: 0;
          border: none;

          .item {


            .link {
              .section-title-black;
              padding: 10px 5px;

              img {
                width: 30px;
                height: 30px;
                display: inline-block;
                margin-right: 19px;
                border-radius: 4px;
              }

              &.circle {
                img {
                  border-radius: 50%;
                }
              }
            }
          }
        }

        .avatar {
          img {
            width: 30px;
            height: 30px;
            display: inline-block;
            margin-right: 19px;
            border-radius: 4px;
          }

          &.circle {
            img {
              border-radius: 50%;
            }
          }
        }
      }
    }

    .message-block, .proposal-block, .set-role-block {
      .label {
        .section-title-black;
        padding: 17px 0;
        display: block;
        text-align: left;
      }
      .text-container {
        outline: none;
        padding: 6px 10px 20px 10px;
        background-color: #fafafa;
        border: 1px solid #f2f2f2;
        .text-default-small;
        resize: none;
        display: block;
        width: 100%;
        min-height: 100px;
      }
    }

    .ic-btn {
      display: block;
      width: 100%;
      margin: 20px 0 0 0;
    }
  }

  .artist-role-block {
    display: inline-block;
    padding: 0 11px;
    margin: 0 10px 10px 0;
    background-color: #fafafa;
    border: 1px dashed #e5e5e5;
    border-radius: 20px;
    cursor: pointer;
    min-width: 70px;
    text-align: center;
    height: 30px;

    input {
      display: none;
    }

    .role-name {
      color: #fff;
      .text-default;
      font-weight: @fw-semibold;
      text-transform: uppercase;
      line-height: 28px;
    }

    .role-switch {
      display: none;
      color: #333;
    }

    &:hover, &:active, &:focus {
      background-color: lighten(#fafafa, 20%);
    }

    &.active {
      background-color: #4a90e2;
      border: 1px solid #4a90e2;
      text-align: left;

      .role-name {
        color: #fff;
      }

      .role-switch {
        float: right;
        display: inline;
        color: #fff;
        margin-left: 9px;

        .fa {
          font-size: 14 * @rem;
          line-height: 28px;
        }
      }

      &:hover, &:active, &:focus {
        background-color: darken(#4a90e2, 20%);
      }
    }

  }


  .styled-placeholder {
    margin-top: 20px;

    &.form-group {
      background-color: transparent;
      height: auto;
      border: 0;
      border-bottom: 1px solid #f2f2f2;
      border-radius: 0;
      margin-bottom: 0;

      &.focused {
        .control-label {
          opacity: 1;
          top: -3px;
          transform: scale(1);
          color: #626875;
        }
      }
    }

    .control-label {
      .title-H2;
      color: #999;
      font-family: @iConnect-font-regular;
      font-size: 10 * @rem;
      font-weight: @fw-regular;
      line-height: 1.125;
      letter-spacing: .46px;
      margin-bottom: 0;
      opacity: .5;
      pointer-events: none;
      position: absolute;
      width: 100%;
      text-align: left;
      top: 23px;
      transform: scale(1);
      transform-origin: left top;
      transition: all .2s ease-in-out;
    }

    .form-control {
      align-self: flex-end;
      border: none;
      box-shadow: none;
      line-height: 1;
    }

    input {
      .text-default-medium;
      color: #333;
      margin: 0;
      font-weight: @fw-regular;
      text-align: center;
      border-radius: 0;
      border-bottom: 1px solid transparent !important;

      max-width: 99.99% !important;
      transition: width 0.25s;
    }

    .bar {
      position: relative;
      display: block;
      width: 100%;

      &:before, &:after {
        content: '';
        height: 1px;
        width: 0;
        bottom: -1px;
        position: absolute;
        background: @iConnect-orange;
        transition: 0.2s ease all;
        -moz-transition: 0.2s ease all;
        -webkit-transition: 0.2s ease all;
      }
      &:before {
        left: 50%;
      }
      &:after {
        right: 50%;
      }
    }

    /* active state */
    input:focus ~ .bar:before, input:focus ~ .bar:after {
      width:50%;
    }

  }

  .btn-group {
    margin-top: 20px;

    &.choice {
      &.type {
        display: flex;
        justify-content: space-between;
        align-items: center;
        flex-wrap: nowrap;
        flex-basis: 0;

        label {
          .text-grey-small;
          outline: none !important;
          box-shadow: none;
          padding: 5px;

          &.active, &:active, &:focus {
            box-shadow: none;
            color: @iConnect-blue;
            font-size: 16px * @rem;
          }
        }
      }
    }
  }
}

